# aws-blog-api

./: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml  prometheus.yml
.github/workflows/: deploy.yml
src/: main.rs
